; ModuleID = '/home/carl/AnghaBench/linux/drivers/scsi/lpfc/extr_lpfc_sli.c_lpfc_sli4_eq_get.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/scsi/lpfc/extr_lpfc_sli.c_lpfc_sli4_eq_get.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.lpfc_eqe = type { i32 }
%struct.lpfc_queue = type { i64, i32 }

@lpfc_eqe_valid = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.lpfc_eqe* (%struct.lpfc_queue*)* @lpfc_sli4_eq_get to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.lpfc_eqe* @lpfc_sli4_eq_get(%struct.lpfc_queue* %0) #0 {
  %2 = alloca %struct.lpfc_eqe*, align 8
  %3 = alloca %struct.lpfc_queue*, align 8
  %4 = alloca %struct.lpfc_eqe*, align 8
  store %struct.lpfc_queue* %0, %struct.lpfc_queue** %3, align 8
  %5 = load %struct.lpfc_queue*, %struct.lpfc_queue** %3, align 8
  %6 = icmp ne %struct.lpfc_queue* %5, null
  %7 = xor i1 %6, true
  %8 = zext i1 %7 to i32
  %9 = call i64 @unlikely(i32 %8)
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %12

11:                                               ; preds = %1
  store %struct.lpfc_eqe* null, %struct.lpfc_eqe** %2, align 8
  br label %29

12:                                               ; preds = %1
  %13 = load %struct.lpfc_queue*, %struct.lpfc_queue** %3, align 8
  %14 = load %struct.lpfc_queue*, %struct.lpfc_queue** %3, align 8
  %15 = getelementptr inbounds %struct.lpfc_queue, %struct.lpfc_queue* %14, i32 0, i32 1
  %16 = load i32, i32* %15, align 8
  %17 = call %struct.lpfc_eqe* @lpfc_sli4_qe(%struct.lpfc_queue* %13, i32 %16)
  store %struct.lpfc_eqe* %17, %struct.lpfc_eqe** %4, align 8
  %18 = load i32, i32* @lpfc_eqe_valid, align 4
  %19 = load %struct.lpfc_eqe*, %struct.lpfc_eqe** %4, align 8
  %20 = call i64 @bf_get_le32(i32 %18, %struct.lpfc_eqe* %19)
  %21 = load %struct.lpfc_queue*, %struct.lpfc_queue** %3, align 8
  %22 = getelementptr inbounds %struct.lpfc_queue, %struct.lpfc_queue* %21, i32 0, i32 0
  %23 = load i64, i64* %22, align 8
  %24 = icmp ne i64 %20, %23
  br i1 %24, label %25, label %26

25:                                               ; preds = %12
  store %struct.lpfc_eqe* null, %struct.lpfc_eqe** %2, align 8
  br label %29

26:                                               ; preds = %12
  %27 = call i32 (...) @mb()
  %28 = load %struct.lpfc_eqe*, %struct.lpfc_eqe** %4, align 8
  store %struct.lpfc_eqe* %28, %struct.lpfc_eqe** %2, align 8
  br label %29

29:                                               ; preds = %26, %25, %11
  %30 = load %struct.lpfc_eqe*, %struct.lpfc_eqe** %2, align 8
  ret %struct.lpfc_eqe* %30
}

declare dso_local i64 @unlikely(i32) #1

declare dso_local %struct.lpfc_eqe* @lpfc_sli4_qe(%struct.lpfc_queue*, i32) #1

declare dso_local i64 @bf_get_le32(i32, %struct.lpfc_eqe*) #1

declare dso_local i32 @mb(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
